# world-simulator

./: CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  religion.md
.cargo-husky/hooks/: pre-commit
.claude/hooks/: pre-commit.sh  session-start.sh
.github/workflows/: ci.yml
.husky/: pre-commit
docs/: architecture.md  civilizational-scope.md  design-principles.md  open-questions.md  physical-world.md  player-intervention.md  simulation-entities.md  state-model.md  tech-stack.md
plans/: 0001-minimum-testable-state.md
sim/: Cargo.toml
sim/src/: action.rs  genesis.rs  lib.rs  needs.rs  physical.rs  tick.rs
sim/src/state/: action.rs  agent.rs  capabilities.rs  civ.rs  cohort.rs  concepts.rs  ids.rs  mod.rs  physical.rs  world.rs
