[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "sim"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ordered-float = { version = "3", features = ["serde"] }

